--- a/app/blocks/panelAutobusy/_panelAutobusy.sass
+++ b/app/blocks/panelAutobusy/_panelAutobusy.sass
@@ -50,9 +50,9 @@
   &__filtrs
     display: flex
     flex-wrap: wrap
-    justify-content: center
+    justify-content: flex-start
   &__filtr
-    width: 25%
+    width: 33%
     padding: 6px
     +PHONE_ONLY
       width: 100%
@@ -103,6 +103,7 @@
     table
       background-color: rgba(136, 136, 136, 0.1)
       border-radius: 6px
+      border-collapse: collapse
     tr
       min-height: 30px
       text-align: center
