--- a/app/jade/panelWyswietlAutobus.jade
+++ b/app/jade/panelWyswietlAutobus.jade
@@ -34,7 +34,7 @@
       .panelWyswietlAutobus__content__form__item
         span.itemHeader Ostatnia lokalizacja
         p X Y
-    .panelWyswietlAutobus__subtitle Aktualny stan autobusu
+    .panelWyswietlAutobus__subtitle Edycja autobusu
     .panelWyswietlAutobus__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
 
     .panelWyswietlAutobus__content__form
