--- a/app/blocks/panelAutobusy/_panelAutobusy.sass
+++ b/app/blocks/panelAutobusy/_panelAutobusy.sass
@@ -44,6 +44,7 @@
     font-size: 1.5em
     line-height: 1.6em
     border-bottom: 1px solid rgba(0,0,0,0.3)
+    margin-top: 15px
   &__text
     color: #88969F
     padding: 5px
@@ -104,6 +105,7 @@
       background-color: rgba(136, 136, 136, 0.1)
       border-radius: 6px
       border-collapse: collapse
+      margin-bottom: 10px
     tr
       min-height: 30px
       text-align: center
@@ -115,6 +117,9 @@
     td
       text-align: center
       padding: 5px
+      &.-alert
+        color: #2196F3
+        padding: 15px 0
     .navigation
       margin: 3px 5px
       cursor: pointer
@@ -127,6 +132,8 @@
           color: #2196F3
         i.-red
           color: red
+        i.-green
+          color: green
 
   &__navigation
     margin-bottom: 5px
@@ -149,4 +156,8 @@
       text-align: center
       &:hover
         background: #008d4c
-
+  &__alertFiltracji
+    color: #2196F3
+    text-align: center
+    display: block
+    width: 100%
