Przyciski aktywacji i dezaktywacji

--- a/app/blocks/panelWyswietlAutobus/_panelWyswietlAutobus.sass
+++ b/app/blocks/panelWyswietlAutobus/_panelWyswietlAutobus.sass
@@ -107,6 +107,14 @@
         background: #00a65a
         &:hover
           background: #008d4c
+      &.greenDark
+        background: #009149
+        &:hover
+          background: #00783c
+      &.red
+        background: rgb(190, 0, 0)
+        &:hover
+          background: #a50000
 
   &__content
     //border-top: 2px solid #D2E3E9
