--- a/app/jade/panelWyswietlAutobus.jade
+++ b/app/jade/panelWyswietlAutobus.jade
@@ -36,29 +36,29 @@
         p X Y
     .panelWyswietlAutobus__subtitle Edycja autobusu
     .panelWyswietlAutobus__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
-
-    .panelWyswietlAutobus__content__form
-        .panelWyswietlAutobus__content__form__item
-          span.item Numer Rejestracyjny
-          input(placeholder="Numer Rejestracyjny")
-        .panelWyswietlAutobus__content__form__item
-          span.item Numer VIN
-          input(placeholder="Numer VIN")
-        .panelWyswietlAutobus__content__form__item
-          span.item Typ Autobusu
-          select
-            option(value='') Typ Autobusu
-            option(value=0) Normalny
-            option(value=1) Przegubowy
-        .panelWyswietlAutobus__content__form__item
-          span.item Biletomat
-          select
-            option(value='') Biletomat
-            option(value=0) Nie
-            option(value=1) Tak
-    .panelWyswietlAutobus__navigation
-      button.green.panelWyswietlAutobus__navigation__item.green Aktualizuj Autobus
-      a(href="#/bus").panelWyswietlAutobus__navigation__item.gray.-abort Anuluj
-      a(href="#/bus/delete/{{ AutobusID }}" ng-hide="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.red Dezaktywuj
-      a(href="#/bus/delete/{{ AutobusID }}" ng-show="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.greenDark Aktywuj
+    form()
+      .panelWyswietlAutobus__content__form
+          .panelWyswietlAutobus__content__form__item
+            span.item Numer Rejestracyjny
+            input(placeholder="Numer Rejestracyjny")
+          .panelWyswietlAutobus__content__form__item
+            span.item Numer VIN
+            input(placeholder="Numer VIN")
+          .panelWyswietlAutobus__content__form__item
+            span.item Typ Autobusu
+            select
+              option(value='') Typ Autobusu
+              option(value=0) Normalny
+              option(value=1) Przegubowy
+          .panelWyswietlAutobus__content__form__item
+            span.item Biletomat
+            select
+              option(value='') Biletomat
+              option(value=0) Nie
+              option(value=1) Tak
+      .panelWyswietlAutobus__navigation
+        button.green.panelWyswietlAutobus__navigation__item.green Aktualizuj Autobus
+        a(href="#/bus/delete/{{ AutobusID }}" ng-hide="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.red Dezaktywuj
+        a(href="#/bus/restore/{{ AutobusID }}" ng-show="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.greenDark Aktywuj
+        a(href="#/bus").panelWyswietlAutobus__navigation__item.gray.-abort Anuluj
 
