--- a/app/jade/panelWyswietlAutobus.jade
+++ b/app/jade/panelWyswietlAutobus.jade
@@ -2,13 +2,13 @@
   .panelWyswietlAutobus__title Szczegóły Autobusu
   .panelWyswietlAutobus__fastTravel
     span
-      a(href="#/")
+      a(href="/#/")
         i.fa.fa-home
         | Home
     span
-      a(href="#/bus") Zarządzanie Autobusami
+      a(href="/#/bus") Zarządzanie Autobusami
     span.-active
-      a(href="#/bus/show/{{ AutobusID }}") Szczegóły Autobusu
+      a(href="/#/bus/show/{{ AutobusID }}") Szczegóły Autobusu
   .panelWyswietlAutobus__wrapper(ng-repeat="item in autobus as AktualnyAutobus")
     .panelWyswietlAutobus__subtitle Aktualny stan autobusu o numerze {{ item.RegistrationNumber }}
     .panelWyswietlAutobus__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
@@ -58,7 +58,7 @@
               option(value=1) Tak
       .panelWyswietlAutobus__navigation
         button.green.panelWyswietlAutobus__navigation__item.green Aktualizuj Autobus
-        a(href="#/bus/delete/{{ AutobusID }}" ng-hide="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.red Dezaktywuj
-        a(href="#/bus/restore/{{ AutobusID }}" ng-show="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.greenDark Aktywuj
-        a(href="#/bus").panelWyswietlAutobus__navigation__item.gray.-abort Anuluj
+        a(href="/#/bus/delete/{{ AutobusID }}" ng-hide="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.red Dezaktywuj
+        a(href="/#/bus/restore/{{ AutobusID }}" ng-show="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.greenDark Aktywuj
+        a(href="/#/bus").panelWyswietlAutobus__navigation__item.gray.-abort Anuluj
 
