--- a/app/jade/panelWyswietlAutobus.jade
+++ b/app/jade/panelWyswietlAutobus.jade
@@ -1,4 +1,4 @@
-.panelWyswietlAutobus(ng-controller="ShowBusController")
+.panelWyswietlAutobus(ng-controller="ShowBusstopController")
   .panelWyswietlAutobus__title Szczegóły Autobusu
   .panelWyswietlAutobus__fastTravel
     span
