--- a/app/blocks/panelPrzystanki/_panelPrzystanki.sass
+++ b/app/blocks/panelPrzystanki/_panelPrzystanki.sass
@@ -44,15 +44,16 @@
     font-size: 1.5em
     line-height: 1.6em
     border-bottom: 1px solid rgba(0,0,0,0.3)
+    margin-top: 20px
   &__text
     color: #88969F
     padding: 5px
   &__filtrs
     display: flex
     flex-wrap: wrap
-    justify-content: center
+    justify-content: flex-start
   &__filtr
-    width: 25%
+    width: 33%
     padding: 6px
     +PHONE_ONLY
       width: 100%
