--- a/app/blocks/panelWyswietlPrzystanek/_panelWyswietlPrzystanek.sass
+++ b/app/blocks/panelWyswietlPrzystanek/_panelWyswietlPrzystanek.sass
@@ -1,12 +1,42 @@
 @charset "UTF-8"
 .panelWyswietlPrzystanek
-  min-width: 700px
-  +TAB_MAX
-    position: relative !important
-    width: 100% !important
-    margin: 55px auto 0
-    //bottom: 0 !important
-    top: 0 !important
+  &__title
+    padding: 0 40px
+    background-color: #2196F3
+    height: 40px
+    color: white
+    text-align: center
+    line-height: 40px
+    font-size: 1.3em
+    cursor: default
+    +Roboto
+  &__fastTravel
+    padding: 10px 15px
+    text-transform: uppercase
+    +Roboto
+    font-size: 0.7em
+    span
+      &:after
+        content: '\f054'
+        font-family: FontAwesome
+        margin: 0 5px
+        font-size: 0.8em
+        vertical-align: text-bottom
+      &:last-of-type
+        &:after
+          content: ''
+      a
+        color: #222
+        text-decoration: none
+        i
+          margin-right: 3px
+      &:hover
+        a
+          color: #2196F3
+      &.-active
+        a
+          color: #208de6
+          font-weight: 500
   &.-hidden
     opacity: 0
     z-index: 0
@@ -18,47 +48,17 @@
     padding: 20px
     +TAB_MAX
       overflow: scroll
-  &__title
-    font-family: Lato, sans-serif
-    font-weight: 500
-
-    font-size: 15px
-
-    text-align: center
-
-    background: #3c8dbc
-    color: #fff
-    padding: 5px
-    opacity: 0.9
-
-    +PHONE_ONLY
-      text-align: center
-
   &__subtitle
-    font-family: Lato, sans-serif
-    font-weight: 300
-    line-height: 26px
-    margin-left: 3px
-    font-size: 12px
-    letter-spacing: 2px
-    text-align: left
-
-    color: #222
-    font-style: italic
-    +PHONE_ONLY
-      text-align: center
-      font-size: 12px
-      font-style: normal
+    +Roboto
+    color: #22282B
+    font-size: 1.5em
+    line-height: 1.6em
+    border-bottom: 1px solid rgba(0,0,0,0.3)
+    cursor: default
   &__text
-    font-family: Lato, sans-serif
-    font-weight: 700
-    max-width: 350px
-    margin: 0 auto
-    font-size: 16px
-    line-height: 1.3
-    letter-spacing: 1.25px
-    text-align: center
-    color: #999
+    color: #88969F
+    padding: 5px
+    cursor: default
   &__alert
     font-family: Lato, sans-serif
     font-weight: 400
@@ -107,12 +107,14 @@
         background: #00a65a
         &:hover
           background: #008d4c
-      &.red
-        background: #a60605
-        order: 3
+      &.greenDark
+        background: #009149
         &:hover
-          background: #b00a11
-
+          background: #00783c
+      &.red
+        background: rgb(190, 0, 0)
+        &:hover
+          background: #a50000
 
   &__content
     //border-top: 2px solid #D2E3E9
@@ -126,6 +128,7 @@
       text-transform: uppercase
       color: #222
       padding-bottom: 15px
+      cursor: default
       +PHONE_ONLY
         text-align: center
     &__form
@@ -143,54 +146,24 @@
         flex-basis: 33%
         padding: 10px
         margin: 5px 0
-
-        input
-          padding: 0 10px
-          height: 40px
-          box-shadow: none !important
-          outline: none
-          font-weight: 400
-          max-width: 300px
-          width: 100%
+        .itemHeader
+          font-weight: 500
           display: block
-          border-radius: 0
-          border-top: 0
-          border-left: 0
-          border-right: 0
-          border-bottom: 2px solid #D2E3E9
+          border-bottom: 1px solid rgba(0,0,0,0.3)
+          cursor: default
+        p
+          margin: 0
+          padding: 10px 5px
           font-size: 16px
-          &:focus
-            border-bottom: 2px solid #4AAED4
+          cursor: default
 
-        select
-          height: 40px
-          box-shadow: none !important
-          outline: none
-          font-weight: 400
-          max-width: 300px
-          width: 100%
-          display: block
-          border-radius: 0
-          border-top: 0
-          border-left: 0
-          border-right: 0
-          border-bottom: 2px solid #D2E3E9
-          font-size: 16px
-          &:focus
-            border-bottom: 2px solid #4AAED4
-
-  &__close
-    transition: opacity 0.36s ease
-    position: absolute
-    top: 5px
-    right: 10px
-    //color: #222222
-    cursor: pointer
-    opacity: 0.8
-    color: #fff
-    &:hover
-      opacity: 1
-    .panelWyswietlPrzystanek__icon
-      font-size: 1.8em !important
-  &__icon
-    font-size: 3em
+      input, select
+        width: 100%
+        height: 40px
+        border-radius: 4px
+        border: none
+        border-bottom: 1px solid rgba(128, 128, 128, 0.6)
+        outline: none
+        padding: 8px
+        background-color: transparent
+        box-shadow: none
